<resources>
    <string name="app_name">Lab7</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="save">save</string>
    <string name="delete_all">Delete All Contacts</string>
    <string name="_1">1</string>
    <string name="Prioridad">prio</string>
    <string name="indicaPr">Prioridad:</string>
    <string name="msg">Redacta tu mensaje</string>
    <string name="btnBack">BACK</string>
    <string name="asunto">Asunto</string>
    <string name="who">Destinatario</string>
    <string name="enviarMail">Enviar Mail</string>
    <string name="priority">Priority:</string>
</resources>
