<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
    android:background="@color/fondoGray">

        <TextView
                android:id="@+id/text_view_phone"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/text_view_name"
                android:layout_width="185dp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/text_view_phone"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignTop="@+id/text_view_phone" android:layout_marginStart="60dp"
                android:layout_marginEnd="98dp" android:layout_marginTop="0dp"/>

        <TextView
                android:id="@+id/text_view_mail"
                android:textColor="@color/textoPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_name"
                android:text="@string/mail"/>
        <TextView
                android:id="@+id/text_view_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textoPurple"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignEnd="@+id/text_view_mail"
                android:layout_marginTop="0dp" android:layout_marginEnd="16dp"
                android:layout_alignParentStart="true"
                android:ellipsize="end"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>