<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerContactoActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_height="185dp" android:layout_width="198dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="93dp"
            android:layout_marginEnd="93dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
            android:layout_width="40dp"
            android:layout_height="39dp"
            android:id="@+id/btnBack"
            android:onClick="back2Home"
            android:src="?attr/actionModeCloseDrawable" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="468dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit" android:layout_marginEnd="120dp"
            android:layout_marginStart="25dp"/>
    <ImageButton
            android:layout_width="40dp"
            android:layout_height="39dp"
            android:id="@+id/btnEdit"
            android:src="@android:drawable/ic_menu_edit" android:layout_marginStart="150dp"
            app:layout_constraintStart_toEndOf="@+id/btnBack" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="1dp" android:layout_marginBottom="471dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="30dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fillName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="163dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="184dp" android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/fillMail" android:layout_marginTop="151dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fillMail"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/fillName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/fillPhone" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="190dp"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fillPhone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="183dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fillMail" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/fillPriority"/>
    <TextView
            android:text="@string/Prioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fillPriority" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="250dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="200dp" android:layout_marginBottom="94dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fillPhone" app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>